feat(vps): display info msgs for starter range (#9275)
ref: MANAGER-11391

Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>
Co-authored-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/vps/src/dashboard/vps-dashboard.html
+++ b/packages/manager/modules/vps/src/dashboard/vps-dashboard.html
@@ -23,6 +23,14 @@
         <span data-translate="vps_dashboard_migration_link"></span>
     </a>
 </oui-message>
+<oui-message data-ng-if="$ctrl.isStarter()" type="info" class="mb-3">
+    <span data-translate="vps_dashboard_starter_range_info_message_1"></span>
+    <a
+        data-ng-href="{{ $ctrl.getRangeCompareLink()}}"
+        target="_blank"
+        data-translate="vps_dashboard_starter_range_info_message_2"
+    ></a>
+</oui-message>
 <oui-message
     data-ng-if="$ctrl.vpsMigrationTask && $ctrl.vpsMigrationData.inAutoMigrationPhase"
     data-type="warning"
@@ -504,6 +512,16 @@
                                 data-translate="vps_option_unavailable"
                             >
                             </span>
+
+                            <oui-message
+                                ng-if="$ctrl.isStarter()"
+                                type="info"
+                                class="mb-3"
+                            >
+                                <p
+                                    data-translate="vps_dashboard_automatic_backup_starter_range_info_message"
+                                ></p>
+                            </oui-message>
                         </oui-tile-description>
                         <oui-action-menu
                             data-disabled="$ctrl.isMigrating"
