--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
@@ -766,6 +766,7 @@
                                     </span>
                                     <input
                                         type="text"
+                                        class="form-control"
                                         data-ng-show="isSetPartition(partition) && partition.typePartition == constants.warningLV"
                                         data-ng-model="partition.volumeName"
                                         data-ng-required="partition.typePartition == constants.warningLV"
