fix(dedicated): issue with partitioning size unit conversions
ref: MANAGER-11586
Signed-off-by: Jean-Baptiste Delon <jean-baptiste.delon@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
+++ b/packages/manager/apps/dedicated/client/app/dedicated/server/installation/ovh/dedicated-server-installation-ovh.html
@@ -880,7 +880,7 @@
                                         <span
                                             class="input-group-addon"
                                             data-ng-show="isSetPartition(partition)"
-                                            data-translate="unit_size_MB"
+                                            data-translate="unit_size_MiB"
                                         >
                                         </span>
                                     </div>
@@ -1104,7 +1104,7 @@
                                         />
                                         <span
                                             class="input-group-addon"
-                                            data-translate="unit_size_MB"
+                                            data-translate="unit_size_MiB"
                                         >
                                         </span>
                                     </div>
