feat(nutanix): missing and wrong tracking data
ref: MANAGER-10874

Signed-off-by: Jacques Larique <jacques.larique.ext@ovhcloud.com>

--- a/packages/manager/modules/nutanix/src/onboarding/template.html
+++ b/packages/manager/modules/nutanix/src/onboarding/template.html
@@ -1,6 +1,7 @@
 <manager-on-boarding-layout
     data-guides=":: $ctrl.guides"
     data-image-source=":: $ctrl.illustration"
+    on-guide-click="$ctrl.trackClick($ctrl.PREFIX_TRACKING_ONBOARDING_GUIDES, guide.tracking)"
 >
     <onboarding-title>
         <p data-translate="nutanix_onboarding_title"></p>
@@ -12,11 +13,12 @@
         ></p>
         <a
             class="oui-button oui-button_primary oui-button_l text-light"
-            data-translate="nutanix_onboarding_order"
+            data-ng-click="$ctrl.trackClick($ctrl.PREFIX_TRACKING_ONBOARDING, 'order')"
             href="{{:: $ctrl.cta }}"
             target="_blank"
             rel="noopener"
         >
+            <span data-translate="nutanix_onboarding_order"></span>
         </a>
     </onboarding-description>
 </manager-on-boarding-layout>
