refactor(web): manage db order stepper
ref: MANAGER-11053

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
+++ b/packages/manager/apps/web/client/app/hosting/database/DATABASE.html
@@ -96,7 +96,7 @@
                             </oui-action-menu-item>
                             <oui-action-menu-item
                                 data-ng-if="$ctrl.canOrderPublic"
-                                data-ui-sref="app.hosting.dashboard.database.order-public({preselectDbCategory: 'private'})"
+                                data-ui-sref="app.hosting.dashboard.database.order-public({preselectDbCategory: 'starter'})"
                             >
                                 <span
                                     data-translate="hosting_tab_DATABASES_configuration_order_title_button_public"
@@ -111,7 +111,7 @@
                                 ></span>
                             </oui-action-menu-item>
                             <oui-action-menu-item
-                                data-ui-sref="app.private-database-order-clouddb"
+                                data-ui-sref="app.hosting.dashboard.database.order-public({preselectDbCategory: 'private'})"
                             >
                                 <span
                                     data-translate="hosting_tab_DATABASES_configuration_order_title_button_private"
