feat(dedicated.ip): ip strat missing ip types
ref: MANAGER-10321, MANAGER-10779

Signed-off-by: Jacques Larique <jacques.larique.ext@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/failover/failover.template.html
+++ b/packages/manager/apps/dedicated/client/app/ip/failover/failover.template.html
@@ -11,7 +11,7 @@
         data-go-to-game-firewall="$ctrl.goToGameFirewall"
         data-go-to-organisation="$ctrl.goToOrganisation"
         data-order-ip-available="$ctrl.orderIpAvailable"
-        data-service-type="$ctrl.serviceType"
+        data-is-additional-ip="$ctrl.isAdditionalIp"
         data-set-action="$parent.setAction"
         data-track-click="$ctrl.trackClick"
         data-track-page="$ctrl.trackPage"
