--- a/packages/manager/modules/carbon-calculator/src/dashboard/carbon-balance-composition/template.html
+++ b/packages/manager/modules/carbon-calculator/src/dashboard/carbon-balance-composition/template.html
@@ -4,11 +4,59 @@
         class="row-fluid"
         data-translate="carbon_calculator_dashboard_carbon_balance_explanation"
     ></p>
-    <img
-        class="border-bottom pb-3"
-        data-ng-src="{{:: $ctrl.IMG_CARBON_BALANCE }}"
-        alt
-        title="{{:: 'carbon_calculator_dashboard_carbon_balance_img_title' | translate}}"
-        data-ng-attr-alt="{{:: 'carbon_calculator_dashboard_carbon_balance_img_title' | translate}}"
-    />
+    <div class="row pb-3">
+        <div class="col-xs-12 col-sm-8">
+            <div class="row text-center">
+                <div class="col-xs-12 col-sm-2">
+                    <img
+                        data-ng-src="{{:: $ctrl.IMG_MANUFACTURING}}"
+                        alt="{{:: 'carbon_calculator_dashboard_carbon_balance_manufacturing' | translate}}"
+                    /><span
+                        class="pl-2"
+                        data-translate="carbon_calculator_dashboard_carbon_balance_manufacturing"
+                    ></span>
+                </div>
+
+                <div class="col-xs-12 col-sm-1">
+                    <span class="sign">&plus;</span>
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <img
+                        data-ng-src="{{:: $ctrl.IMG_ELECTRICITY}}"
+                        alt="{{:: 'carbon_calculator_dashboard_carbon_balance_electricity' | translate}}"
+                    /><span
+                        class="pl-2"
+                        data-translate="carbon_calculator_dashboard_carbon_balance_electricity"
+                    ></span>
+                </div>
+                <div class="col-xs-12 col-sm-1">
+                    <span class="sign">&plus;</span>
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <img
+                        data-ng-src="{{:: $ctrl.IMG_OPERATIONS}}"
+                        alt="{{:: 'carbon_calculator_dashboard_carbon_balance_operations' | translate}}"
+                    />
+                    <span
+                        class="pl-2"
+                        data-translate="carbon_calculator_dashboard_carbon_balance_operations"
+                    ></span>
+                </div>
+                <div class="col-xs-12 col-sm-1">
+                    <span class="sign">&equals;</span>
+                </div>
+                <div class="col-xs-12 col-sm-3">
+                    <img
+                        data-ng-src="{{:: $ctrl.IMG_CARBON}}"
+                        alt="{{:: 'carbon_calculator_dashboard_carbon_balance_greenhouse_gas' | translate}}"
+                    />
+                    <strong
+                        class="pl-2"
+                        data-translate="carbon_calculator_dashboard_carbon_balance_greenhouse_gas"
+                    ></strong>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-8 border-bottom"></div>
+    </div>
 </div>
