--- a/packages/manager/apps/dedicated/client/app/account/user/users/groups/add/user-users-groups-add.html
+++ b/packages/manager/apps/dedicated/client/app/account/user/users/groups/add/user-users-groups-add.html
@@ -83,6 +83,10 @@
                             value="UNPRIVILEGED"
                             data-translate="user_roles_unprivileged"
                         ></option>
+                        <option
+                            value="NONE"
+                            data-translate="user_roles_none"
+                        ></option>
                     </select>
                 </div>
             </form>
