--- a/packages/manager/apps/dedicated/client/app/account/user/users/update/user-users-update.html
+++ b/packages/manager/apps/dedicated/client/app/account/user/users/update/user-users-update.html
@@ -106,6 +106,10 @@
                             value="UNPRIVILEGED"
                             data-translate="user_roles_unprivileged"
                         ></option>
+                        <option
+                            value="NONE"
+                            data-translate="user_roles_none"
+                        ></option>
                     </select>
                 </div>
 
