fix(web.hosting): add max database value on hosting dashboard
ref: MANAGER-10882

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/hosting/general-informations/GENERAL_INFORMATIONS.html
+++ b/packages/manager/apps/web/client/app/hosting/general-informations/GENERAL_INFORMATIONS.html
@@ -538,6 +538,7 @@
                                 data-wuc-pbec-nb-elements="hosting.databaseCount"
                                 data-wuc-pbec-max-elements="hosting.databaseMax"
                                 data-wuc-pbec-upper-limit="cloudWebUnlimitedQuantity"
+                                data-wuc-pbec-force-display-max-elements="true"
                             ></div>
                         </oui-tile-description>
                     </oui-tile-definition>
