feat(dedicated.carbon): improve UI for mobile & desktop
ref: MANAGER-11640 / MANAGER-11639

Signed-off-by: David Arsène <david.arsene.ext@ovhcloud.com>

--- a/packages/manager/modules/carbon-calculator/src/dashboard/carbon-balance-composition/template.html
+++ b/packages/manager/modules/carbon-calculator/src/dashboard/carbon-balance-composition/template.html
@@ -4,8 +4,8 @@
         class="row-fluid"
         data-translate="carbon_calculator_dashboard_carbon_balance_explanation"
     ></p>
-    <div class="row pb-3">
-        <div class="col-xs-12 col-sm-8">
+    <div class="row pb-2">
+        <div class="col-xs-12 col-sm-9">
             <div class="row text-center">
                 <div class="col-xs-12 col-sm-2">
                     <img
@@ -46,17 +46,21 @@
                     <span class="sign">&equals;</span>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                    <img
-                        data-ng-src="{{:: $ctrl.IMG_CARBON}}"
-                        alt="{{:: 'carbon_calculator_dashboard_carbon_balance_greenhouse_gas' | translate}}"
-                    />
-                    <strong
-                        class="pl-2"
-                        data-translate="carbon_calculator_dashboard_carbon_balance_greenhouse_gas"
-                    ></strong>
+                    <div class="row">
+                        <div class="col-5 text-right">
+                            <img
+                                data-ng-src="{{:: $ctrl.IMG_CARBON}}"
+                                alt="{{:: 'carbon_calculator_dashboard_carbon_balance_greenhouse_gas' | translate}}"
+                            />
+                        </div>
+                        <strong
+                            class="col-6 text-left"
+                            data-translate="carbon_calculator_dashboard_carbon_balance_greenhouse_gas"
+                        ></strong>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-8 border-bottom"></div>
+        <div class="col-xs-12 col-sm-9 border-bottom pt-3 mx-4"></div>
     </div>
 </div>
