feat(web): tracking
ref: MANAGER-11078

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/domain/webhosting/order/steps/hosting/domain-webhosting-order-steps-hosting.html
+++ b/packages/manager/apps/web/client/app/domain/webhosting/order/steps/hosting/domain-webhosting-order-steps-hosting.html
@@ -21,7 +21,7 @@
         data-catalog="$ctrl.catalog"
         data-offers="$ctrl.hostingOffers"
         data-show-details="$ctrl.showDetails"
-        data-on-offer-click="$ctrl.onHostingOfferClick(offer)"
+        data-on-group-offer-click="$ctrl.onHostingGroupOfferClick(groupOffer, versionOffer)"
     >
     </web-component-hosting-domain-offers>
 </oui-step-form>
