--- a/packages/manager/modules/sign-up/src/form/details/details.html
+++ b/packages/manager/modules/sign-up/src/form/details/details.html
@@ -65,6 +65,7 @@
                     data-model="$ctrl.signUpFormCtrl.model.phoneType"
                     data-required
                     data-ng-blur="$ctrl.onFieldBlur($ctrl.formCtrl.phoneType)"
+                    data-on-change="$ctrl.onPhoneTypeChange()"
                 >
                     <oui-radio data-value="'mobile'" inline>
                         <span
@@ -123,6 +124,22 @@
                 </div>
             </oui-field>
             <!-- /input[name="phone"] -->
+        </div>
+    </div>
+
+    <div class="row" data-ng-if="$ctrl.signUpFormCtrl.rules.phoneType">
+        <div class="col-lg">
+            <oui-field>
+                <oui-checkbox
+                    name="sms-consent"
+                    data-model="$ctrl.signUpFormCtrl.smsConsent"
+                    data-disabled="$ctrl.signUpFormCtrl.model.phoneType !== 'mobile'"
+                >
+                    <span
+                        data-translate="sign_up_details_field_sms_consent"
+                    ></span>
+                </oui-checkbox>
+            </oui-field>
         </div>
     </div>
 
