--- a/packages/manager/modules/sign-up/src/form/details/details.html
+++ b/packages/manager/modules/sign-up/src/form/details/details.html
@@ -1,6 +1,6 @@
 <div class="sign-up-form-details">
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg">
             <!-- legalform -->
             <oui-field
                 data-label="{{ 'sign_up_details_field_legalform' | translate }}"
@@ -26,8 +26,9 @@
             </oui-field>
             <!-- /select[name="legalform"] -->
         </div>
-
-        <div class="col-lg-6">
+    </div>
+    <div class="row">
+        <div class="col-lg">
             <!-- country -->
             <oui-field
                 data-label="{{ 'sign_up_details_field_country' | translate }}"
@@ -57,7 +58,7 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg">
             <!-- phone -->
             <oui-field
                 data-label="{{ 'sign_up_details_field_phone' | translate }}"
@@ -99,8 +100,10 @@
             </oui-field>
             <!-- /input[name="phone"] -->
         </div>
+    </div>
 
-        <div class="col-lg-6">
+    <div class="row">
+        <div class="col-lg">
             <!-- language -->
             <oui-field
                 data-label="{{ 'sign_up_details_field_language' | translate }}"
@@ -125,56 +128,6 @@
                 </label>
             </oui-field>
             <!-- /select[name="language"] -->
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-6">
-            <!-- zip -->
-            <oui-field
-                data-label="{{ 'sign_up_details_field_zip' | translate }}"
-            >
-                <div
-                    data-ng-class="{ 'oui-input-group zip-group' : $ctrl.signUpFormCtrl.rules.zip.prefix }"
-                >
-                    <span
-                        data-ng-if="$ctrl.signUpFormCtrl.rules.zip.prefix"
-                        data-ng-bind="$ctrl.signUpFormCtrl.rules.zip.prefix"
-                    >
-                    </span>
-                    <input
-                        type="text"
-                        class="oui-input"
-                        name="zip"
-                        id="zip"
-                        data-ng-model="$ctrl.zipModel.model"
-                        data-ng-model-options="{ getterSetter: true, allowInvalid: true }"
-                        data-ng-required="$ctrl.signUpFormCtrl.rules.zip.mandatory"
-                        data-ng-pattern="$ctrl.zipModel.validator"
-                        data-ng-blur="$ctrl.onFieldBlur($ctrl.formCtrl.zip)"
-                    />
-                </div>
-            </oui-field>
-            <!-- /input[name="zip"] -->
-        </div>
-
-        <div class="col-lg-6">
-            <!-- city -->
-            <oui-field
-                data-label="{{ 'sign_up_details_field_city' | translate }}"
-            >
-                <input
-                    type="text"
-                    class="oui-input"
-                    name="city"
-                    id="city"
-                    data-ng-model="$ctrl.signUpFormCtrl.model.city"
-                    data-ng-required="$ctrl.signUpFormCtrl.rules.city.mandatory"
-                    data-ng-pattern="$ctrl.signUpFormCtrl.rules.city.regularExpression"
-                    data-ng-blur="$ctrl.onFieldBlur($ctrl.formCtrl.city)"
-                />
-            </oui-field>
-            <!-- /input[name="city"] -->
         </div>
     </div>
 
@@ -223,6 +176,58 @@
                 </label>
             </oui-field>
             <!-- /select[name="area"] -->
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg">
+            <!-- zip -->
+            <oui-field
+                data-label="{{ 'sign_up_details_field_zip' | translate }}"
+            >
+                <div
+                    data-ng-class="{ 'oui-input-group zip-group' : $ctrl.signUpFormCtrl.rules.zip.prefix }"
+                >
+                    <span
+                        data-ng-if="$ctrl.signUpFormCtrl.rules.zip.prefix"
+                        data-ng-bind="$ctrl.signUpFormCtrl.rules.zip.prefix"
+                    >
+                    </span>
+                    <input
+                        type="text"
+                        class="oui-input"
+                        name="zip"
+                        id="zip"
+                        data-ng-model="$ctrl.zipModel.model"
+                        data-ng-model-options="{ getterSetter: true, allowInvalid: true }"
+                        data-ng-required="$ctrl.signUpFormCtrl.rules.zip.mandatory"
+                        data-ng-pattern="$ctrl.zipModel.validator"
+                        data-ng-blur="$ctrl.onFieldBlur($ctrl.formCtrl.zip)"
+                    />
+                </div>
+            </oui-field>
+            <!-- /input[name="zip"] -->
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg">
+            <!-- city -->
+            <oui-field
+                data-label="{{ 'sign_up_details_field_city' | translate }}"
+            >
+                <input
+                    type="text"
+                    class="oui-input"
+                    name="city"
+                    id="city"
+                    data-ng-model="$ctrl.signUpFormCtrl.model.city"
+                    data-ng-required="$ctrl.signUpFormCtrl.rules.city.mandatory"
+                    data-ng-pattern="$ctrl.signUpFormCtrl.rules.city.regularExpression"
+                    data-ng-blur="$ctrl.onFieldBlur($ctrl.formCtrl.city)"
+                />
+            </oui-field>
+            <!-- /input[name="city"] -->
         </div>
     </div>
 </div>
