feat(sign-up): adding sms consent
ref: MANAGER-11426

Signed-off-by: Jacques Larique <jacques.larique.ext@ovhcloud.com>

--- a/packages/manager/modules/sign-up/src/form/details/details.html
+++ b/packages/manager/modules/sign-up/src/form/details/details.html
@@ -65,6 +65,7 @@
                     data-model="$ctrl.signUpFormCtrl.model.phoneType"
                     data-required
                     data-ng-blur="$ctrl.onFieldBlur($ctrl.formCtrl.phoneType)"
+                    data-on-change="$ctrl.onPhoneTypeChange()"
                 >
                     <oui-radio data-value="'mobile'" inline>
                         <span
