fix(iam): rebase on newer version of shell
ref: DTCORE-761
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/dashboard/dashboard.template.html
+++ b/packages/manager/modules/iam/src/dashboard/dashboard.template.html
@@ -9,7 +9,8 @@
                     data-translate="iam_dashboard_header_tabs_item_policies"
                 ></span
             ></oui-header-tabs-item>
-            <oui-header-tabs-item data-state="iam.policy.identitiesRedirection"
+            <oui-header-tabs-item
+                data-state="iam.dashboard.identitiesRedirection"
                 ><span
                     data-translate="iam_dashboard_header_tabs_item_identities"
                 ></span
