--- a/packages/manager/apps/iam/src/iam.template.html
+++ b/packages/manager/apps/iam/src/iam.template.html
@@ -3,7 +3,7 @@
     <head>
         <title>IAM</title>
     </head>
-    <body class="container-fluid">
+    <body class="container-fluid pt-3">
         <ui-router-breadcrumb></ui-router-breadcrumb>
         <div data-ui-view></div>
     </body>
