--- a/packages/manager/modules/pci/src/projects/project/billing/history/history.html
+++ b/packages/manager/modules/pci/src/projects/project/billing/history/history.html
@@ -8,7 +8,7 @@
     ></a>
 </oui-message>
 <cui-message-container data-messages="$ctrl.messages"></cui-message-container>
-<div class="d-flex justify-content-between mb-3">
+<div class="d-flex justify-content-between mb-3" data-ng-if="$ctrl.period">
     <oui-button
         variant="link"
         on-click="$ctrl.goToPreviousMonth()"
@@ -31,7 +31,7 @@
     </oui-button>
 </div>
 <div>
-    <div class="row mb-3">
+    <div class="row mb-3" data-ng-if="$ctrl.monthHistory.price">
         <div class="col-md-3 px-0">
             <div class="oui-box text-right h-100">
                 <h4
@@ -47,6 +47,7 @@
     </div>
     <div>
         <oui-button
+            data-ng-if="$ctrl.monthHistory.orderId"
             variant="primary"
             disabled="!$ctrl.monthHistory.orderId"
             on-click="$ctrl.exportConsumption()"
