feat(spfemailpro): add spf on emailpro
Ticket: DTRSD-116877

Signed-off-by: maximeVaillant <maxime.vaillant@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/license/license.html
+++ b/packages/manager/apps/dedicated/client/app/license/license.html
@@ -38,7 +38,10 @@
             </div>
         </div>
 
-        <oui-datagrid class="table-striped" rows-loader="loadDatagridLicences($config)">
+        <oui-datagrid
+            class="table-striped"
+            rows-loader="loadDatagridLicences($config)"
+        >
             <oui-datagrid-column
                 title=":: 'license_dashboard_table_title_type' | translate"
                 property="type"
