--- a/packages/manager/apps/web/client/app/hosting/cdn/cancel-terminate/hosting-cdn-cancel-terminate.html
+++ b/packages/manager/apps/web/client/app/hosting/cdn/cancel-terminate/hosting-cdn-cancel-terminate.html
@@ -9,8 +9,9 @@
 >
     <!--End Date Engagement description-->
     <div>
-        <p class="m-0"
-           data-translate="hosting_cdn_cancel_terminate_question"
+        <p
+            class="m-0"
+            data-translate="hosting_cdn_cancel_terminate_question"
         ></p>
     </div>
 </oui-modal>
