--- a/packages/manager/apps/web/client/app/hosting/cdn/terminate/hosting-cdn-terminate.html
+++ b/packages/manager/apps/web/client/app/hosting/cdn/terminate/hosting-cdn-terminate.html
@@ -9,12 +9,14 @@
 >
     <!--End Date Engagement description-->
     <div>
-        <p class="m-0"
-           data-translate="hosting_cdn_terminate_question_part_1"
+        <p
+            class="m-0"
+            data-translate="hosting_cdn_terminate_question_part_1"
         ></p>
-        <p class="m-0"
-           data-translate="hosting_cdn_terminate_question_part_2"
-           data-translate-values="{endEngagementDate: '<b>' + ($ctrl.cdnServiceInfo.expirationDate | date) + '</b>'}">
-        </p>
+        <p
+            class="m-0"
+            data-translate="hosting_cdn_terminate_question_part_2"
+            data-translate-values="{endEngagementDate: '<b>' + ($ctrl.cdnServiceInfo.expirationDate | date) + '</b>'}"
+        ></p>
     </div>
 </oui-modal>
