--- a/packages/manager/modules/ng-layout-helpers/src/onboarding/onboarding.html
+++ b/packages/manager/modules/ng-layout-helpers/src/onboarding/onboarding.html
@@ -1,6 +1,8 @@
 <div class="container-fluid mx-0 px-0 manager-on-boarding-layout">
-    <div data-ng-if="!$ctrl.hideIllustrationSection"
-         class="row align-items-center">
+    <div
+        data-ng-if="!$ctrl.hideIllustrationSection"
+        class="row align-items-center"
+    >
         <div class="w-100">
             <div class="placeholder p-5 d-flex justify-content-center">
                 <img
