--- a/packages/manager/modules/pci/src/projects/onboarding/onboarding.html
+++ b/packages/manager/modules/pci/src/projects/onboarding/onboarding.html
@@ -1,5 +1,4 @@
 <div class="pci_projects_onboarding w-100 h-100" style="overflow: auto;">
-
     <!--Trusted zone badge-->
     <div class="text-center mt-3">
         <ovh-manager-trusted-nic-label
@@ -16,26 +15,29 @@
             <p data-translate="pci_projects_onboarding_description3"></p>
 
             <!--Create a project-->
-            <a data-ng-if="!$ctrl.isTrustedZone"
-               class="oui-button oui-button_primary"
-               data-ui-sref="pci.projects.new"
-               data-track-on="click"
-               data-track-name="PCI_PROJECTS_ONBOARDING_NEW_PROJECT"
-               data-track-type="navigation"
+            <a
+                data-ng-if="!$ctrl.isTrustedZone"
+                class="oui-button oui-button_primary"
+                data-ui-sref="pci.projects.new"
+                data-track-on="click"
+                data-track-name="PCI_PROJECTS_ONBOARDING_NEW_PROJECT"
+                data-track-type="navigation"
             >
-            <span
-                data-translate="pci_projects_onboarding_create_project"
-            ></span>
+                <span
+                    data-translate="pci_projects_onboarding_create_project"
+                ></span>
             </a>
 
             <!--Call customer-->
             <div data-ng-if="$ctrl.isTrustedZone">
-                <p class="m-0 font-weight-bold"
-                   data-translate="pci_projects_onboarding_banner_trusted_customer_info_1">
-                </p>
-                <p class="m-0 font-weight-bold"
-                   data-translate="pci_projects_onboarding_banner_trusted_customer_info_2">
-                </p>
+                <p
+                    class="m-0 font-weight-bold"
+                    data-translate="pci_projects_onboarding_banner_trusted_customer_info_1"
+                ></p>
+                <p
+                    class="m-0 font-weight-bold"
+                    data-translate="pci_projects_onboarding_banner_trusted_customer_info_2"
+                ></p>
             </div>
         </div>
     </div>
