--- a/packages/manager/modules/pci/src/projects/project/kubernetes/details/service/oidc-provider/add-oidc-provider/template.html
+++ b/packages/manager/modules/pci/src/projects/project/kubernetes/details/service/oidc-provider/add-oidc-provider/template.html
@@ -1,4 +1,8 @@
-<form name="addOidcProviderForm" id="addOidcProvider" data-ng-submit="$ctrl.onAddOidcProviderConfirm()">
+<form
+    name="addOidcProviderForm"
+    id="addOidcProvider"
+    data-ng-submit="$ctrl.onAddOidcProviderConfirm()"
+>
     <oui-modal
         data-on-dismiss="$ctrl.goBack()"
         data-primary-label="{{:: 'pci_projects_project_kubernetes_details_service_add_oidc_provider_action_add' | translate}}"
@@ -16,7 +20,9 @@
         <oui-field
             data-label="{{::'pci_projects_project_kubernetes_details_service_add_oidc_provider_field_url' | translate}}"
         >
-            <span data-translate="pci_projects_project_kubernetes_details_service_add_oidc_provider_field_url_extra"></span>
+            <span
+                data-translate="pci_projects_project_kubernetes_details_service_add_oidc_provider_field_url_extra"
+            ></span>
             <input
                 type="text"
                 class="oui-input"
@@ -30,7 +36,9 @@
         <oui-field
             data-label="{{::'pci_projects_project_kubernetes_details_service_add_oidc_provider_field_client_id' | translate}}"
         >
-            <span data-translate="pci_projects_project_kubernetes_details_service_add_oidc_provider_field_client_id_extra"></span>
+            <span
+                data-translate="pci_projects_project_kubernetes_details_service_add_oidc_provider_field_client_id_extra"
+            ></span>
             <input
                 type="text"
                 class="oui-input"
