fix(web.hosting): change content on hosting order
ref: MANAGER-11653

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/domain/webhosting/order/domain-webhosting-order.html
+++ b/packages/manager/apps/web/client/app/domain/webhosting/order/domain-webhosting-order.html
@@ -1,8 +1,12 @@
 <div data-ovh-alert="webhosting-order-alert"></div>
 
-<oui-back-button data-on-click="$ctrl.goBackToDashboard()">
-    <span data-translate="domain_webhosting_order_title"></span>
-</oui-back-button>
+<oui-header
+    data-heading="{{ 'domain_webhosting_order_title' | translate }}"
+    data-description="{{ 'domain_webhosting_order_description' | translate }}"
+>
+    <oui-back-button data-on-click="$ctrl.goBackToDashboard()">
+    </oui-back-button>
+</oui-header>
 
 <ovh-manager-web-domain-webhosting-order-steps
     data-catalog="$ctrl.catalog"
