--- a/packages/manager/apps/web/client/app/hosting/general-informations/GENERAL_INFORMATIONS.html
+++ b/packages/manager/apps/web/client/app/hosting/general-informations/GENERAL_INFORMATIONS.html
@@ -521,7 +521,7 @@
                             </oui-action-menu-item>
 
                             <oui-action-menu-item
-                                data-ui-sref="app.private-database-order-clouddb"
+                                data-ui-sref="app.hosting.dashboard.database.order-public({preselectDbCategory: 'private'})"
                             >
                                 <span
                                     data-translate="hosting_dashboard_service_privatesql_order"
