--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/index.html
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/index.html
@@ -141,8 +141,7 @@
             </oui-radio-toggle-group>
             <p
                 class="mt-2 mb-0"
-                data-translate="vps_dashboard_tile_configuration_storage_double"
-                data-translate-values="{ price: $ctrl.configurationTile.isUpfront ? $ctrl.configurationTile.upgrades.storage.upfrontDiff.text : $ctrl.configurationTile.upgrades.storage.diff.text }"
+                data-ng-bind-html=":: $ctrl.doubleStorageText"
             ></p>
         </oui-tile-description>
 
